--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: skymath@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hacknostics is a repository of useful atmospheric diagnostics. Especially useful examples
   for user who are in doing the pivot to python from NCL.
-baseurl: "/docs" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://brianpm.github.io/hacknostics" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  brianpm
