updates to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -103,12 +103,23 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+# Local History for Visual Studio Code
+.history/
+
 # https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
 # brought this in 20 Oct 2019
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+**/.idea/
+.idea/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
